# Scylla

./: .gitignore  CMakeLists.txt
Modules/: FindSDL2.cmake
Source/Scylla/: Main.cpp
Source/Scylla/Math/: Vec2.h  Vec2Math.h
Source/Scylla/Platform/: Window.h  WindowConfig.h
